other/prevent-bare-pods/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-bare-pods
status:
  ready: true
